# avif_experiments

./: .gitignore  CMakeLists.txt  README.md
images/: test1.avif  test1.y4m
include/: utils.h  y4m.h
src/: avif_decode_test.cpp  avif_test_jpg_encode.cpp  utils.cpp
